fix: storage error on first load

--- a/options.html
+++ b/options.html
@@ -8,8 +8,8 @@
 	<center>
 	<form id="mainForm" accept-charset="utf-8" style="width:100%;">
 		<input type="submit" value="Save All Changes" />
-		<input type="button" value="Copy ActiveTab Info" id="btnCopyAllTabs" />
-		<input type="button" value="Copy AllTabs Info"  id="btnCopyTab" />
+		<input type="button" value="Copy Window Tabs" id="btnCopyAllTabs" />
+		<input type="button" value="Copy Active Tab"  id="btnCopyTab" />
 		<!--input id="impbtn_wrapper" type="button" name="impbtn" value="Import" />
 		<input id="impbtn" type="file" name="impbtn" value="" style="display:none;" />
 		<input id="expbtn" type="button" name="impbtn" value="Export" /-->
