--- a/options.html
+++ b/options.html
@@ -9,6 +9,7 @@
 	<form id="mainForm" accept-charset="utf-8" style="width:100%;">
 		<input type="submit" value="Save All Changes" />
 		<input type="button" value="Copy Window Tabs" id="btnCopyAllTabs" />
+		<input type="button" value="Copy Selected Tabs" id="btnCopySelectedTabs" />
 		<input type="button" value="Copy Active Tab"  id="btnCopyTab" />
 		<!--input id="impbtn_wrapper" type="button" name="impbtn" value="Import" />
 		<input id="impbtn" type="file" name="impbtn" value="" style="display:none;" />
