--- a/options.html
+++ b/options.html
@@ -4,27 +4,19 @@
 	<meta charset="utf-8"></meta>
   	<title>settings</title>
 </head>
-<body>
-	<center>
-	<form id="mainForm" accept-charset="utf-8" style="width:100%;">
-		<input type="submit" value="Save All Changes" />
-		<input type="button" value="Copy Window Tabs" id="btnCopyAllTabs" />
-		<input type="button" value="Copy Selected Tabs" id="btnCopySelectedTabs" />
-		<input type="button" value="Copy Active Tab"  id="btnCopyTab" />
-		<!--input id="impbtn_wrapper" type="button" name="impbtn" value="Import" />
-		<input id="impbtn" type="file" name="impbtn" value="" style="display:none;" />
-		<input id="expbtn" type="button" name="impbtn" value="Export" /-->
+<body style="width:680px;background:lightgray;">
+		<input type="button" value="Window Tabs" id="btnAllTabs" />
+		<input type="button" value="Selected Tabs" id="btnSelectedTabs" />
+		<input type="button" value="Active Tab"  id="btnActiveTab" />
 		<table id="mainTable" border=1 style="width:100%;text-align:left;" >
 			<thead>
-				<th>Choose Active</th>
-				<th>Format String<br/>(Placeholders: %url,%title,<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/Tab">more</a>)</th>
-				<th>Actions</th>
+				<th style="width:0px;">Select</th>
+				<th>Format (%url,%title,<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/Tab">more</a>)</th>
+				<th style="width:0px;">Manage</th>
 			</thead>
 			<tbody id='mainTableBody' />
 		</table>
-			<div>
-	</form>
-	</center>
-  <script src="options.js"></script>
+    <textarea wrap="off" style="width:100%;height:5em;resize:vertical;" id="output" placeholder="Output will appear here"></textarea>
+    <script src="options.js"></script>
 </body>
 </html>
