--- a/options.html
+++ b/options.html
@@ -5,18 +5,34 @@
   	<title>settings</title>
 </head>
 <body style="width:680px;background:lightgray;">
-		<input type="button" value="Window Tabs" id="btnAllTabs" />
-		<input type="button" value="Selected Tabs" id="btnSelectedTabs" />
-		<input type="button" value="Active Tab"  id="btnActiveTab" />
+        <p></p>
+        <fieldset>
+        <label>1.Select/Create Format</label>
 		<table id="mainTable" border=1 style="width:100%;text-align:left;" >
 			<thead>
-				<th style="width:0px;">Select</th>
+				<th style="width:5em;"><!-- Select--> </th>
 				<th>Format (%url,%title,<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/Tab">more</a>)</th>
-				<th style="width:0px;">Manage</th>
+				<th style="width:5em;"></th>
 			</thead>
 			<tbody id='mainTableBody' />
 		</table>
-    <textarea wrap="off" style="width:100%;height:5em;resize:vertical;" id="output" placeholder="Output will appear here"></textarea>
+        </fieldset>
+        <fieldset>
+            <label>2.Choose Scope</label>
+            <div style="float:right;">
+        		<input type="button" value="Active"  id="btnActiveTab" title"only the currently active tab in this window" />
+    	    	<input type="button" value="Selected" id="btnSelectedTabs" title="all selected (aka. highlighted) tabs in this window" />
+		        <input type="button" value="Window" id="btnAllTabs" title="all tabs in this window" />
+            </div>
+        </fieldset>
+        <textarea wrap="off" style="width:100%;height:5em;resize:vertical;" id="output" placeholder="Output will appear here"></textarea>
+        <fieldset>
+            <a target="_blank" href="https://github.com/igorlogius/get-tabs-infos" > <button> &#8505; Help </button></a>
+            <div style="float:right;">
+		        <input type="button" value="3.Copy Output"  id="btnCopy" />
+            </div>
+        </fieldset>
+        <p></p>
     <script src="options.js"></script>
 </body>
 </html>
