--- a/options.html
+++ b/options.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8"></meta>
   	<title>settings</title>
+    <style>
+        .action {
+            width:100%;
+        }
+    </style>
 </head>
 <body style="width:680px;background:lightgray;">
         <p></p>
@@ -25,7 +30,9 @@
 		        <input type="button" value="Window" id="btnAllTabs" title="all tabs in this window" />
             </div>
         </fieldset>
+        <fieldset>
         <textarea wrap="off" style="width:100%;height:5em;resize:vertical;" id="output" placeholder="Output will appear here"></textarea>
+        </fieldset>
         <fieldset>
             <a target="_blank" href="https://github.com/igorlogius/get-tabs-infos" > <button> &#8505; Help </button></a>
             <div style="float:right;">
