--- a/popup.html
+++ b/popup.html
@@ -40,6 +40,6 @@
             </div>
         </fieldset>
         <p></p>
-    <script src="options.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
