--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,8 @@
             <label>3. Preview, Edit and Copy Output</label>
             <textarea wrap="off" style="width:100%;height:5em;resize:vertical;" id="output" placeholder="Output  will appear here"></textarea>
             <div style="text-align:center;">
-		        <input type="button" value="Copy" id="btnCopy" style="width:50%;" />
+		        <input type="button" value="Save" id="btnSave" style="width:25%;" />
+		        <input type="button" value="Copy" id="btnCopy" style="width:25%;" />
             </div>
         </fieldset>
     <script src="popup.js"></script>
