feat: add all windows scope options

--- a/popup.html
+++ b/popup.html
@@ -19,9 +19,10 @@
         <fieldset>
             <label>2. Select Scope</label>
             <div style="text-align:center;">
-        		<input type="button" value="Current Tab"  id="btnActiveTab" />
-    	    	<input type="button" value="Selected Tabs" id="btnSelectedTabs" />
-		        <input type="button" value="Window Tabs" id="btnAllTabs" />
+    	    	<input type="button" value="Selected (All Windows)" id="btnSelectedTabsAllWindows" />
+		        <input type="button" value="All Tabs (All Windows)" id="btnAllTabsAllWindows" />
+		        <input type="button" value="All Tabs (This Window)" id="btnAllTabs" />
+    	    	<input type="button" value="Selected (This Window)" id="btnSelectedTabs" />
             </div>
         </fieldset>
         <fieldset>
