feat: add %linebreak placeholder

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
 <body style="width:680px;background:lightgray;">
         <p></p>
         <fieldset>
-        <label>1. Create and Select Format (%url,%title,%index, <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/Tab">more</a>) </label>
+        <label>1. Create and Select Format (%linebreak,%url,%title,%index, <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs/Tab">more</a>) </label>
 		<table id="mainTable" border=1 style="width:100%;text-align:left;" >
 			<tbody id='mainTableBody' />
 		</table>
