--- a/popup.html
+++ b/popup.html
@@ -7,37 +7,29 @@
       width: 680px;
       background: lightgray;
       padding: 3px;
-      font-size: 0.6em;
+      /*font-size: 0.6em;*/
     }
     legend {
       font-size: 2em;
       font-weight: bold;
     }
     #btnSave {
-      width: 25%;
-      float: right;
+      width: 100%;
       text-align: center;
     }
     #btnCopy,
     #btnCopyAsHTML {
-      width: 25%;
+      width: 50%;
       float: right;
       text-align: center;
     }
     #saveFilename {
       width: 100%;
+      text-align: center;
     }
     #selectTable {
       width: 100%;
       text-align: left;
-    }
-    #btnAllTabs,
-    #btnAllTabsAllWindows,
-    #btnSelectedTabs,
-    #btnSelectedTabsAllWindows {
-      width: 50%;
-      float: right;
-      text-align: right;
     }
     #output {
       width: 100%;
@@ -51,8 +43,13 @@
     }
 
     #newEntry,
-    #formatOptions {
+    #formatOptions,
+    #scopeOptions {
       width: 90%;
+      text-align: center;
+    }
+    #scopeOptions {
+      width: 100%;
       text-align: center;
     }
 
@@ -65,79 +62,78 @@
   </style>
 </head>
 <body>
-  <fieldset>
-    <legend>1. Select Format</legend>
-    <table id="selectTable" border="1">
-      <tr>
-        <td>
-          <abbr
-            title="Placeholders: %linebreak, %url, %protocol, %search, %port, %pathname, %hostname, %origin, %title, %index, %audible, %discarded, %lastAccessed, %pinned, %cookieStoreId, %favIconUrl, %hidden, %highlighted, %id, %incognito, %status"
-          >
-            <input
-              id="newEntry"
-              type="text"
-              value=""
-              placeholder="Enter a new Format String here, Hover to show placeholders."
-            />
-          </abbr>
+  <table id="selectTable" border="0">
+    <tr>
+      <td>
+        <abbr
+          title="Placeholders: %linebreak, %url, %protocol, %search, %port, %pathname, %hostname, %origin, %title, %index, %audible, %discarded, %lastAccessed, %pinned, %cookieStoreId, %favIconUrl, %hidden, %highlighted, %id, %incognito, %status"
+        >
           <input
-            type="button"
-            value="➕"
-            title="add new entry"
-            id="btnAddEntry"
+            id="newEntry"
+            type="text"
+            value=""
+            placeholder="Add new Format String here, Hover to show placeholders."
           />
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <input type="button" value="🗑" title="delete" id="btnDelEntry" />
-          <select id="formatOptions">
-            <option value="">-- Select Format --</option>
-          </select>
-        </td>
-      </tr>
+        </abbr>
+        <input
+          type="button"
+          value="➕"
+          title="Add new Format String"
+          id="btnAddEntry"
+        />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+          type="button"
+          value="🗑"
+          title="Delete Selected Format String"
+          id="btnDelEntry"
+        />
+        <select id="formatOptions">
+          <option value="">-- Select Format --</option>
+        </select>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <select id="scopeOptions">
+          <option value="">-- Select Scope --</option>
+          <option value="AllTabs">All Tabs (Current Window)</option>
+          <option value="SelectedTabs">Selected Tabs (Current Window)</option>
+          <option value="AllTabsAllWindows">All Tabs (All Windows)</option>
+          <option value="SelectedTabsAllWindows">
+            Selected Tabs (All Windows)
+          </option>
+        </select>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <textarea
+          wrap="off"
+          id="output"
+          placeholder="Select Format and Scope and Output will appear here"
+        ></textarea>
+        <input type="button" value="Copy as Text" id="btnCopy" />
+        <input type="button" value="Copy as HTML" id="btnCopyAsHTML" />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+          id="saveFilename"
+          type="text"
+          value=""
+          placeholder="Save Filename: YYYY-MM-DD_hh-mm-ss Get Tabs Infos "
+        />
+        <input type="button" value="Save as File" id="btnSave" />
+      </td>
+    </tr>
+    <tr></tr>
+  </table>
 
-      <tr></tr>
-    </table>
-  </fieldset>
-  <fieldset>
-    <legend>2. Pick Scope</legend>
-    <input type="button" value="All Tabs (Current Window)" id="btnAllTabs" />
-    <input
-      type="button"
-      value="All Tabs (all Windows)"
-      id="btnAllTabsAllWindows"
-    />
-    <input
-      type="button"
-      value="Selected Tabs (Current Window)"
-      id="btnSelectedTabs"
-    />
-    <input
-      type="button"
-      value="Selected Tabs (all Windows)"
-      id="btnSelectedTabsAllWindows"
-    />
-  </fieldset>
-  <fieldset>
-    <legend>3. Copy Preview</legend>
-    <textarea
-      wrap="off"
-      id="output"
-      placeholder="Select Format and Scope and Output will appear here"
-    ></textarea>
-    <input type="button" value="Copy as Text" id="btnCopy" />
-    <input type="button" value="Copy as HTML" id="btnCopyAsHTML" />
-  </fieldset>
-  <fieldset>
-    <legend>4. Filename (optional)</legend>
-    <input
-      id="saveFilename"
-      type="text"
-      value=""
-      placeholder="Default: Get Tabs Infos YYYY-MM-DD_hh-mm-ss"
-    />
-    <input type="button" value="Save" id="btnSave" />
-  </fieldset>
+  <script src="utils.js"></script>
   <script src="popup.js"></script>
 </body>
