--- a/popup.html
+++ b/popup.html
@@ -66,7 +66,7 @@
     <tr>
       <td>
         <abbr
-          title="Placeholders: %linebreak, %url, %protocol, %search, %port, %pathname, %hostname, %origin, %title, %index, %audible, %discarded, %lastAccessed, %pinned, %cookieStoreId, %favIconUrl, %hidden, %highlighted, %id, %incognito, %status"
+          title="Placeholders: %linebreak, %url, %protocol, %search, %port, %pathname, %hostname, %origin, %title"
         >
           <input
             id="newEntry"
